Material buttons z-index order changed after update, fixing of z-index for PWA banner area

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -31,6 +31,7 @@
 			bottom: 15px;
 			width: calc(100% - 59px);
 			max-width: 900px;
+			z-index: 999;
 
 			&::after {
 				content: '';
